# Printf2

printf/: AddSpecifiers.c  CMakeLists.txt  CreateListSpecifiers.c  Makefile  ParsingString.c  PrintChar.c  PrintDouble.c  PrintNumSigned.c  PrintNumSpecifiers.c  PrintNumUnsigned.c  PrintString.c  a.out  author  ft_printf.c  main.c  printf.h
printf/include/: printf.h
printf/sources/: addspecifiers.c  createlistspecifiers.c  ft_printf.c  numspecifiers.c  numspecifiers_2.c  parsingstring.c  printchar.c  printdouble.c  printdouble_2.c  printnumsigned.c  printnumunsigned.c  printpercent.c  printrest.c  printstring.c
